--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,6 +29,7 @@
         <form action="/manual_refresh_dev" method="POST" style="display: inline; margin-left: 10px;">
             <button type="submit" class="btn btn-secondary">Refresh Test App</button>
         </form>
+        <button class="btn btn-success" id="filtered-refresh-btn" style="margin-left: 10px;">Filtered Refresh</button>
     </div>
 </header>
 
@@ -39,6 +40,14 @@
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    document.getElementById('filtered-refresh-btn').addEventListener('click', function() {
+        document.querySelectorAll('.collapse.show').forEach(collapse => {
+            const event = new Event('refresh');
+            collapse.dispatchEvent(event);
+        });
+    });
+</script>
 </body>
 </html>
 
