--- a/app/templates/tab1.html
+++ b/app/templates/tab1.html
@@ -633,7 +633,7 @@ document.addEventListener("DOMContentLoaded", () => {
     input.addEventListener("input", debouncedSubmit);
   });
 
-  setInterval(refreshTable, 30000); // Changed to 30 seconds
+  setInterval(refreshTable, 60000); // Updated to 60 seconds
 });
 </script>
 
