--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,9 +7,9 @@
     </div>
 </div>
 
-<p style="text-align: center;"><strong>Welcome to the BT&E RFID TEST DASHBOARD.</strong></p>
-<p style="text-align: center;">Use the tabs above to view detailed information, or click "REFRESH" to update data immediately.</p>
-<p style="text-align: center;">THIS SERVER WILL BE THE MOST RECENT BUT MAY HAVE CRASHES.</p>
+<p style="text-align: center;"><strong>Welcome to the BT&E RFID DASHBOARD.</strong></p>
+<p style="text-align: center;">Use the tabs above to view detailed information, or click "REFRESH FILTERED" to update data you are viewing immediately.</p>
+<p style="text-align: center;">THIS SERVER WILL BE THE MOST STABLE.</p>
 <h3 style="padding-left: 240px;"><strong>Scanable Items-</strong></h3>
 <ul>
 <li style="list-style-type: none;">
@@ -25,10 +25,10 @@
 <li style="list-style-type: none;">
 <ul>
 <li>
-<h3><strong>All Linens(except Spandex, Napkins, Runners, and Sashes)</strong></h3>
+<h3><strong>All Linens(except Spandex, Napkins, Runners, and Sashes are hand entered)</strong></h3>
 </li>
 <li>
-<h3><strong>All Resale</strong></h3>
+<h3><strong>All Resale- No Sterno</strong></h3>
 </li>
 <li>
 <h3><strong>All AV and Concession</strong></h3>
