--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,7 +28,7 @@
 <h3><strong>All Linens(except Spandex, Napkins, Runners, and Sashes are hand entered)</strong></h3>
 </li>
 <li>
-<h3><strong>All Resale- No Sterno</strong></h3>
+<h3><strong>All Concession Resale- No Sterno or KwikCovers</strong></h3>
 </li>
 <li>
 <h3><strong>All AV and Concession</strong></h3>
@@ -37,7 +37,7 @@
 <h3><strong>All Tent Tops</strong></h3>
 </li>
 <li>
-<h3><strong>Garden Chairs</strong></h3>
+<h3><strong>Garden Chairs(soon)</strong></h3>
 </li>
 <li>
 <h3><strong>Cocktail Tbl Tops & Legs</strong></h3>
