--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -49,7 +49,7 @@
 <h3><strong>Cocktail Tbl Tops & Legs</strong></h3>
 </li>
 <li>
-<h3><strong>Carpet Runners--------------V1.3</strong></h3>
+<h3><strong>Carpet Runners--------------V2.01b</strong></h3>
 </li>
 </ul>
 </li>
