--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,6 +30,7 @@
             <button type="submit" class="btn btn-secondary">Refresh Test App</button>
         </form>
         <button class="btn btn-success" id="filtered-refresh-btn" style="margin-left: 10px;">Filtered Refresh</button>
+        <a href="http://pi5:6800/" class="btn btn-info" style="margin-left: 10px;">Incentive Program</a>
     </div>
 </header>
 
